@@ -38,6 +38,8 @@ Changes to version 3.3.5
   so and what's the right implementation is still unclear to me).
 - Obsolete rfc1442 BIT STRING type implemented to handle outdated SNMP
   entities.
+- Make pysnmp.mapping.udp.role.manager attempting to resolve and cache default
+  agent IP on instantiation for better peformance.
 
 Thu Jun 07 19:23:33 MSD 2003
 
